--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+section{
+	background-color: #f5f5f5;
+}
+
+h1{
+	margin-top: 10px;
+	padding: 10px;
+}
+
+div{
+	border: 1px solid rgba(fff,1);
+	background-color: white;
+	margin: 20px;
+	padding: 10px;
+}
+.authour{
+	text-align: right;
+	font-style: italic;
+}
